# stjerm-zero456

./: AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.in  NEWS  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  version.h.in  version.m4
doc/: CMakeLists.txt  Makefile  Makefile.in  stjerm.8
src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  config.c  main.c  mainwindow.c  popupmenu.c  shortcut.c  stjerm.h  term.c
